# tree-sitter-askama

./: Cargo.toml  go.mod  grammar.js  package.json
.github/workflows/: ci.yaml
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: doc_examples.txt
